# DataValidation

./: README.md  RUNBOOK.md
validify/: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
validify/.github/workflows/: ci.yml
validify/config/: rules.yaml
validify/data/: .gitkeep  taxi_trips_sample.csv
validify/src/validify/: __init__.py  main.py
validify/src/validify/api/: app.py
validify/src/validify/core/: __init__.py  base.py  exceptions.py  models.py
validify/src/validify/engine/: __init__.py  runner.py
validify/src/validify/rules/: __init__.py  built_in.py  registry.py
validify/src/validify/transforms/: __init__.py  pipeline.py
validify/src/validify/utils/: __init__.py  decorators.py
validify/tests/: conftest.py  test_rules.py
